[gd_scene load_steps=7 format=3 uid="uid://dl24pvqm6t4lx"]

[ext_resource type="Texture2D" uid="uid://clewh4hnsum3m" path="res://icon.svg" id="1_g13of"]
[ext_resource type="Script" uid="uid://ccdjl42japvwv" path="res://features/player/PlayerController.gd" id="1_o7et6"]
[ext_resource type="Script" uid="uid://c2p1qrit2k4gm" path="res://features/player/PlayerAuthoritative.gd" id="2_24gqh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7et6"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_24gqh"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_yjynp"]
radius = 150.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_o7et6")

[node name="PlayerAuthoritative" type="Node" parent="."]
script = ExtResource("2_24gqh")

[node name="SpriteLayers" type="Node2D" parent="."]

[node name="BodySprite" type="Sprite2D" parent="SpriteLayers"]
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_g13of")

[node name="Label" type="Label" parent="SpriteLayers"]
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -14.0
text = "Player"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_o7et6")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_24gqh")

[node name="AreaOfInterest" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfInterest"]
shape = SubResource("CircleShape2D_yjynp")
